--- a/HTML/bachiller.html
+++ b/HTML/bachiller.html
@@ -21,11 +21,9 @@
     <section>
         <article class="texto-grande">
             <h2 class="texto-negrita"> Introduccion</h2>
-            <p class="texto-centro">En este apartado tengo muy buenos recuerdos sobre esta etapa de mi vida,
-                ya que tengo muchos recuerdos sobre amigos y vivencias sobre esta etapa de
-                vida, aunque en la actualidad no sé nada de estas personas, las aprecié
-                demasiado durante ese tiempo que los llegué a conocer. En está etapa no tengo 
-                más que está foto
+            <p class="texto-centro">Esta es una de las etapas mas confusas ya que que tuve buenos amigos 
+                y tamibien sucesos que me dificultaron socializar, además de que se me diagnosto mi distimia
+                y ansiedad y fueron varios añosque atesoro
             </p>
             
         </article>
