--- a/HTML/bachiller.html
+++ b/HTML/bachiller.html
@@ -23,7 +23,9 @@
             <h2 class="texto-negrita"> Introduccion</h2>
             <p class="texto-centro">Esta es una de las etapas mas confusas ya que que tuve buenos amigos 
                 y tamibien sucesos que me dificultaron socializar, además de que se me diagnosto mi distimia
-                y ansiedad y fueron varios añosque atesoro
+                y ansiedad y fueron varios añosque atesoro.La verdad aun que si pasaron muchas cosas muy malas en esta etapa 
+                gracias a ellas puedo valorar el presenta y aun cuando aun se me dificulta formar vinculos con otras 
+                personas trato de estar con ellos por que yo quiero ser su amigo
             </p>
             
         </article>
